se agrega link cerrar sesion

--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -30,6 +30,11 @@
            <li>
                <a href="#">Historia</a>
            </li>
+           {% if request.user.is_authenticated %}
+           <li>
+               <a href="{% url 'logout' %}">Cerrar sesion</a>
+           </li>
+           {% endif %}
        </ul>
     </header>
     <div class="landing">
